--- a/package.json
+++ b/package.json
@@ -1,11 +1,17 @@
 {
-  "name": "reactplayer",
+  "name": "namastejavascript",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.6.2",
+    "@mui/material": "^5.6.4",
+    "axios": "^0.27.2",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
     "react-player": "^1.11.1",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "3.0.1"
   },
   "scripts": {
