--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "namastejavascript",
-  "homepage": "https://ankittyagi206.github.io/namasteJS",
+  "name": "namastetube",
+  "homepage": "https://ankittyagi206.github.io/namasteTube",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
