--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "namastetube",
-  "homepage": "https://ankittyagi206.github.io/namasteTube",
+  "homepage": "https://ankittyagideveloper.github.io/namasteTube",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
